Adding Google Ads

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,14 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <!-- Google Ads -->
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-5422413832537104",
+            enable_page_level_ads: true
+       });
+  </script>
 </head>
 <body>
   <mk-root></mk-root>
