Add service worker

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <meta name="msapplication-tap-highlight" content="no">
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png">
+  <link rel="apple-touch-icon" href="assets/icons/icon-512x512.png">
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,6 +25,8 @@
             enable_page_level_ads: true
        });
   </script>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <mk-root></mk-root>
